--- a/locales/volto.pot
+++ b/locales/volto.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Plone\n"
-"POT-Creation-Date: 2024-05-16T13:01:20.799Z\n"
+"POT-Creation-Date: 2024-05-24T08:45:35.933Z\n"
 "Last-Translator: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
 "Language-Team: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -17,11 +17,6 @@ msgstr ""
 #: components/manage/SubscriptionsPanel/SubscriptionsPanel
 # defaultMessage: Back
 msgid "Back"
-msgstr ""
-
-#: views/Channel
-# defaultMessage: Iscriviti per riceverla
-msgid "Iscriviti per ricevere la newsletter"
 msgstr ""
 
 #: components/manage/SendHistoryPanel/SendHistoryPanel
@@ -42,7 +37,6 @@ msgstr ""
 #: components/manage/ModalSend
 #: components/manage/ModalTestSend
 #: components/manage/SendHistoryPanel/SendHistoryPanel
-#: components/manage/SendHistoryPanel/SendHistoryPanelMenu
 #: components/manage/SubscriptionsPanel/ModalAddSubscription
 #: components/manage/SubscriptionsPanel/ModalImportSubscriptions
 #: components/manage/SubscriptionsPanel/SubscriptionsPanel
@@ -54,7 +48,6 @@ msgstr ""
 #: components/manage/ModalSend
 #: components/manage/ModalTestSend
 #: components/manage/SendHistoryPanel/SendHistoryPanel
-#: components/manage/SendHistoryPanel/SendHistoryPanelMenu
 #: components/manage/SubscriptionsPanel/ModalAddSubscription
 #: components/manage/SubscriptionsPanel/ModalImportSubscriptions
 #: components/manage/SubscriptionsPanel/SubscriptionsPanel
@@ -469,44 +462,24 @@ msgstr ""
 msgid "panel_error"
 msgstr ""
 
-#: components/manage/SendHistoryPanel/SendHistoryPanelMenu
-# defaultMessage: Are you sure you want to delete all history?
-msgid "send_history_confirm_delete_all"
-msgstr ""
-
-#: components/manage/SendHistoryPanel/SendHistoryPanelMenu
-# defaultMessage: Delete all history
-msgid "send_history_delete_all"
-msgstr ""
-
-#: components/manage/SendHistoryPanel/SendHistoryPanelMenu
-# defaultMessage: An error has occurred while trying to delete all history
-msgid "send_history_delete_all_error"
-msgstr ""
-
-#: components/manage/SendHistoryPanel/SendHistoryPanelMenu
-# defaultMessage: All history deleted successfully!
-msgid "send_history_delete_all_success"
-msgstr ""
-
-#: components/manage/SendHistoryPanel/SendHistoryPanelMenu
-# defaultMessage: An error has occurred
-msgid "send_history_error_delete_all"
-msgstr ""
-
 #: components/manage/ChannelActionsMenu
 # defaultMessage: Send history
 msgid "send_history_label"
 msgstr ""
 
-#: components/manage/SendHistoryPanel/SendHistoryPanelMenu
-# defaultMessage: Loading...
-msgid "send_history_loading"
-msgstr ""
-
 #: views/NewsletterConfirmView
 # defaultMessage: Conferma richiesta
 msgid "subscribeNewsletterConfirmViewTitle"
+msgstr ""
+
+#: views/Channel
+# defaultMessage: Iscriviti per ricevere la newsletter
+msgid "subscribeNewsletterHeader"
+msgstr ""
+
+#: views/Channel
+# defaultMessage: Inserisci il tuo indirizzo email per iscriverti alla newsletter
+msgid "subscribeNewsletterLabel"
 msgstr ""
 
 #: components/manage/SubscriptionsPanel/SubscriptionsPanelMenu
@@ -544,29 +517,9 @@ msgstr ""
 msgid "subscriptions_add_subscriber"
 msgstr ""
 
-#: components/manage/SubscriptionsPanel/SubscriptionsPanelMenu
-# defaultMessage: Are you sure you want to delete all subscriptions?
-msgid "subscriptions_confirm_delete_all"
-msgstr ""
-
 #: components/manage/SubscriptionsPanel/SubscriptionsPanel
 # defaultMessage: Creation date
 msgid "subscriptions_creation_date"
-msgstr ""
-
-#: components/manage/SubscriptionsPanel/SubscriptionsPanelMenu
-# defaultMessage: Delete all subscriptions
-msgid "subscriptions_delete_all"
-msgstr ""
-
-#: components/manage/SubscriptionsPanel/SubscriptionsPanelMenu
-# defaultMessage: An error has occurred while trying to delete all history
-msgid "subscriptions_delete_all_error"
-msgstr ""
-
-#: components/manage/SubscriptionsPanel/SubscriptionsPanelMenu
-# defaultMessage: All subscriptions deleted successfully!
-msgid "subscriptions_delete_all_success"
 msgstr ""
 
 #: components/manage/SubscriptionsPanel/SubscriptionsPanelMenu
@@ -577,11 +530,6 @@ msgstr ""
 #: components/manage/SubscriptionsPanel/SubscriptionsPanel
 # defaultMessage: Email
 msgid "subscriptions_email"
-msgstr ""
-
-#: components/manage/SubscriptionsPanel/SubscriptionsPanelMenu
-# defaultMessage: An error has occurred
-msgid "subscriptions_error_delete_all"
 msgstr ""
 
 #: components/manage/SubscriptionsPanel/SubscriptionsPanelMenu
@@ -605,9 +553,7 @@ msgid "subscriptions_upload_list"
 msgstr ""
 
 #: components/manage/SendHistoryPanel/SendHistoryPanel
-#: components/manage/SendHistoryPanel/SendHistoryPanelMenu
 #: components/manage/SubscriptionsPanel/SubscriptionsPanel
-#: components/manage/SubscriptionsPanel/SubscriptionsPanelMenu
 # defaultMessage: Success
 msgid "success_label"
 msgstr ""
@@ -637,6 +583,11 @@ msgstr ""
 
 #: views/Channel
 # defaultMessage: Rimuovi la tua iscrizione alla newsletter
+msgid "unsubscribeNewsletterHeader"
+msgstr ""
+
+#: views/Channel
+# defaultMessage: Inserisci il tuo indirizzo email per cancellarti dalla newsletter
 msgid "unsubscribeNewsletterLabel"
 msgstr ""
 
@@ -664,11 +615,11 @@ msgid "user_secret_not_found"
 msgstr ""
 
 #: views/Channel
-# defaultMessage: Richiesta di iscrizione inviata
+# defaultMessage: Richiesta di iscrizione inviata. Controlla la tua casella di posta elettronica per verificare la tua iscrizione.
 msgid "user_subscribe_success"
 msgstr ""
 
 #: views/Channel
-# defaultMessage: Richiesta di cancellazione inviata
+# defaultMessage: Richiesta di cancellazione inviata. Controlla la tua casella di posta elettronica per verificare la tua iscrizione.
 msgid "user_unsubscribe_success"
 msgstr ""
