--- a/locales/volto.pot
+++ b/locales/volto.pot
@@ -290,7 +290,7 @@ msgid "newsletterSubscriptionError"
 msgstr ""
 
 #: views/Channel
-# defaultMessage: Grazie per esserti iscritto alla newsletter. Controlla la tua casella di posta elettronica per verificare la tua iscrizione.
+# defaultMessage: Grazie per esserti iscritto alla newsletter. Controlla la tua casella di posta elettronica per confermare l'iscrizione.
 msgid "newsletterSubscriptionThankyou"
 msgstr ""
 
@@ -615,11 +615,11 @@ msgid "user_secret_not_found"
 msgstr ""
 
 #: views/Channel
-# defaultMessage: Richiesta di iscrizione inviata. Controlla la tua casella di posta elettronica per verificare la tua iscrizione.
+# defaultMessage: Richiesta di iscrizione inviata. Controlla la tua casella di posta elettronica per confermare l'iscrizione.
 msgid "user_subscribe_success"
 msgstr ""
 
 #: views/Channel
-# defaultMessage: Richiesta di cancellazione inviata. Controlla la tua casella di posta elettronica per verificare la tua iscrizione.
+# defaultMessage: Richiesta di cancellazione inviata. Controlla la tua casella di posta elettronica per confermare la cancellazione.
 msgid "user_unsubscribe_success"
 msgstr ""
